fix: spacing issues on home page resolved

--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 body {
-  background-color: #FFEBAD;
+  background-color: #543786;
 }
